--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "react-youtube": "^7.5.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
-    "youtube-api-search": "0.0.5"
+    "youtube-api-search": "0.0.5",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0",
+    "express": "^4.13.3",
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -56,7 +60,6 @@
     "css-loader": "^0.19.0",
     "eslint": "^1.5.0",
     "eslint-plugin-react": "^3.4.2",
-    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^1.6.1",
@@ -73,9 +76,6 @@
     "sinon-chai": "^2.8.0",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "url-loader": "^0.6.2"
   }
 }
