--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0",
-    "express": "^4.13.3",
+    "express": "^4.13.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
