--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0",
-    "express": "^4.13.3"
-  },
-  "devDependencies": {
+    "express": "^4.13.3",
     "autoprefixer": "^6.0.3",
     "babel-eslint": "^4.1.6",
     "babel-jscs": "^2.0.5",
@@ -77,5 +75,7 @@
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "url-loader": "^0.6.2"
+  },
+  "devDependencies": {
   }
 }
